--- a/new_job.ipynb
+++ b/new_job.ipynb
@@ -105,11 +105,11 @@
    "source": [
     "## Load training data and testing dataset\n",
     "#\n",
-    "dataset_train = pd.read_csv('dataset/aug_train.csv')\n",
+    "dataset_train = pd.read_csv('aug_train.csv')\n",
     "column_name = list(dataset_train.columns)\n",
     "\n",
     "print(\"Training size : {}\".format(len(dataset_train)))\n",
-    "dataset_test = pd.read_csv('dataset/aug_test.csv')\n",
+    "dataset_test = pd.read_csv('aug_test.csv')\n",
     "dataset_train = dataset_train.append(dataset_test, ignore_index = True)\n",
     "\n",
     "# See 5 rows\n",
@@ -300,11 +300,11 @@
    "source": [
     "# Load training data\n",
     "#\n",
-    "dataset_train = pd.read_csv('dataset/aug_train.csv')\n",
+    "dataset_train = pd.read_csv('aug_train.csv')\n",
     "column_name = list(dataset_train.columns)\n",
     "\n",
     "print(\"Training size : {}\".format(len(dataset_train)))\n",
-    "dataset_test = pd.read_csv('dataset/aug_test.csv')\n",
+    "dataset_test = pd.read_csv('aug_test.csv')\n",
     "dataset_train = dataset_train.append(dataset_test, ignore_index = True)"
    ]
   },
